# reservation

./: .env  Cargo.toml  README.md  deny.toml
abi/: Cargo.toml  build.rs
abi/protos/: reservation.proto
abi/src/pb/: reservation.rs
migrations/: 20250611072305_init.down.sql  20250611081600_reservation.down.sql  20250611081600_reservation.up.sql  20250611082115_reservation_trigger.up.sql  20250611082729_reservation_func.up.sql
reservation/: Cargo.toml
reservation/src/: error.rs  lib.rs  manager.rs
rfcs/: template.md
service/: Cargo.toml
