[package]
name = "reservation"
version = "0.1.0"
license = "MIT"
edition = "2024"

[dependencies]
abi = { version = "0.1.0", path = "../abi" }
chrono = { version = "0.4.41", features = ["serde"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
thiserror = "2.0.12"
